--- a/index.html
+++ b/index.html
@@ -11,28 +11,42 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+    <style>
+      /* Fonts */
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+      * {
+        font-family: 'Poppins', sans-serif;
+      }
+    </style>
   </head>
-  <body>
+  <body class="container">
     <h2 class="text-center text-success">Search your favorite Book</h2>
-    <!-- meal search area -->
+    <!-- book search area -->
     <div class="input-group mb-3 w-50 mx-auto">
       <input
-        id="search-field"
+        id="search-input"
         type="text"
         class="form-control"
         placeholder="Search the book you want"
         aria-label="Recipient's username"
         aria-describedby="button-addon2"
       />
-      <button
-        onclick="searchFood()"
-        class="btn btn-outline-secondary"
-        type="button"
-        id="button-search"
-      >
+      <button class="btn btn-outline-secondary" type="button" id="search-btn">
         search
       </button>
     </div>
+    <!-- error -->
+    <div class="text-center text-danger h5" id="error"></div>
+    <!-- Spinner -->
+    <div class="text-center">
+      <div id="spinner" class="spinner-border d-none" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+    <!-- num of result -->
+    <div class="text-center text-success h4" id="resultNumber"></div>
+    <!-- book Container section -->
+    <div id="book-container" class="row"></div>
 
     <script src="js/main.js"></script>
   </body>
